# WheelSpinnerApp

./: app.py  pyproject.toml
static/css/: style.css
static/js/: wheel.js
templates/: index.html
