[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"


[tool.poetry.dependencies]
python = ">=3.11"
email-validator = ">=2.2.0"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
openai = ">=1.65.4"
psycopg2-binary = ">=2.9.10"

# Optional: Development dependencies can be added here
# [tool.poetry.dev-dependencies]
